Fix subtitles placement on mobile

--- a/src/components/subtitles/Subtitles.scss
+++ b/src/components/subtitles/Subtitles.scss
@@ -2,7 +2,7 @@
 
 .subtitles {
   position: absolute;
-  bottom: 70px;
+  bottom: 40px;
 
   width: 100%;
   height: 40px;
@@ -18,6 +18,8 @@
   &__text {
     @include reset-paragraph;
     @include responsive-font(32, 46);
+
+    margin-top: 16px;
 
     font-family: $font-family-akagi;
     color: $color-orange;
